--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
     sdk: flutter
   flutter_otp_text_field:
   provider:
-  shared_preferences:
   http:
+  fluttertoast:
+  get_storage: ^2.1.1
+
   
   
 
