--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,9 +75,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/medical_record.png
-    - assets/images/google-maps-icon.png
+    
     - assets/images/category.png
+    - assets/images/doctor.png
+    
 
   #   - images/a_dot_ham.jpeg
 
@@ -93,10 +94,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Alice
-      fonts:
-        - asset: fonts/Alice-Regular.ttf
-          
+    
     - family: Quicksand
       fonts:
         - asset: fonts/Quicksand-Regular.ttf
