--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,8 @@ dependencies:
   # get_it: ^7.6.0
   awesome_snackbar_content: 
   material_dialogs: ^1.1.4
-  
+  flutter_ripple: ^0.0.3
 
-  
-
-
-  
-  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -75,11 +70,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    
-    - assets/images/category.png
-    - assets/images/doctor.png
-    - assets/images/No_data.png
-    - assets/images/Search.png
+    - assets/images/ 
+    # - assets/images/category.png
+    # - assets/images/doctor.png
+    # - assets/images/No_data.png
+    # - assets/images/Search.png
     
 
   #   - images/a_dot_ham.jpeg
